k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clustermind-api
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clustermind-api
  template:
    metadata:
      labels:
        app: clustermind-api
    spec:
      containers:
        - name: api
          image: ghcr.io/tasos24gnr/clustermind-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: clustermind-api
  namespace: demo
spec:
  selector:
    app: clustermind-api
  ports:
    - port: 80
      targetPort: 8000
